@startuml

  [*] --> Submitted : An external user submits \n a use of collections proposal
  note right of Submitted
    status: SUBMITTED
    event: SUBMITTED
    visibility: New Assignments list (for curators and collections managers) and
    My proposals list (for external requesters)
  end note

  Submitted --> Pending : Proposal is assumed by \n a curator or a collections manager \n and enters review process
  note left of Pending
      status: PENDING
      event: {ASSIGNED, FORWARDED, DOCUMENTS_REQUESTED,
              DOCUMENTS_SUBMITTED, REFERRED_TO_DIRECTION,
              DIRECTION_CLARIFIED}
      visibility : My assignments list
      (for curators, collections managers)
      My proposals list (for external requesters)
   end note

  Pending --> Pending : Proposal is updated \n during review \n (eg. messages exchange)
  Submitted --> Cancelled : Requester cancels \n the proposal
  Pending --> Cancelled : Requester cancels \n the proposal
  Approved --> Cancelled : Requester cancels \n the proposal and project
  note right of Cancelled
      Status: CANCELLED
       event: CANCELLED
       visibility : Cancelled list (for curators and collections managers)
       My proposals list (for external requesters)
    end note
  Pending --> Rejected : Rejected after review
  note left of Rejected
      Status: REJECTED
       event: REJECTED
       visibility : Rejected list (for curators and collections managers)
       My proposals list (for external requesters)
    end note

  Pending --> Approved : Approved after review
   note right of Approved
      Status: APPROVED
       event: APPROVED
        visibility : Approved list (for curators and collections managers)
        My proposals list (for external requesters)
    end note
  Approved --> [*] : Project is created after proposal approval
  Rejected --> [*]
  Cancelled --> [*]

@enduml
